# justpdf

./: LICENSE  README.md  demo.py  examples.py  main.py  pdf_utils.py  pyproject.toml
.github/workflows/: workflow.yaml
justpdf/: __init__.py
src/justpdf/: __init__.py  reader.py
